# polymarket

./: .gitignore  AGENTS.md  BIG_TRADE_MONITOR_README.md  PACKAGE_SUMMARY.md  QUICKSTART.py  README.md  VALIDATION_REPORT.md  big_trade_monitor_demo.ipynb  pyproject.toml  sports_orderbook_demo.ipynb  test.ipynb  test1.ipynb  test_big_trade_monitor.py  test_orderbook.py
polymarketAPI/: __init__.py  api_builder.py  client.py
polymarket_orderbook/: README.md  __init__.py  big_trade_monitor.py  main.py  orderbook_client.py  pyproject.toml  sports_filter.py  trade_manager.py  trade_monitor.py
